[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/actors/Demon.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/demon 2 idle-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/demon 2 fly-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/demon 2 jump-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/shadow.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sounds/Retro Roar Krushed 01.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 112, 96 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 112, 96 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 112, 96 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 112, 96 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 112, 0, 112, 96 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 112, 96 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 336, 0, 112, 96 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 448, 0, 112, 96 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 560, 0, 112, 96 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 112, 96 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 112, 0, 112, 96 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 112, 96 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 336, 0, 112, 96 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 3.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "flying",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "jumping",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 176.003

[node name="Demon" type="KinematicBody2D"]
script = ExtResource( 1 )
speed = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 0.0012719
frames = SubResource( 2 )
animation = "flying"
frame = 3
playing = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="DetectionRing" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 0, 39 )
scale = Vector2( 0.828125, 0.6875 )
texture = ExtResource( 5 )

[node name="AudioRoar" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -13.639
pitch_scale = 0.97

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
